--- a/slappey.json
+++ b/slappey.json
@@ -1,5 +1,6 @@
 {
   "name": "Fnex",
+  "YOUTUBE_API_KEY": "AIzaSyDRUp0u22MKK3ZdojVi3NBiuoMVsu-X96E",
   "language": "javascript",
   "manager": "npm",
   "token": "ODA0MDkyMDQ0MTkyNTE0MDY4.YBHTEg.UJGAJGQxYNX1HZ8VCEALEkYIMzo",
