--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "opusscript": "0.0.7",
+    "ytdl-core": "^4.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
