--- a/slappey.json
+++ b/slappey.json
@@ -4,6 +4,5 @@
   "language": "javascript",
   "manager": "npm",
   "token": "ODA0MDkyMDQ0MTkyNTE0MDY4.YBHTEg.kDyzJ2xoariJEqDu87ZysZ6E-uY",
-  "prefix": "F!",
-  "prefix1": "f!"
+  "prefix": "F!"
 }
