--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "discord-giveaway": "^1.1.3",
+    "discord-giveaways": "^4.4.3",
     "discord-paginationembed": "^2.1.0",
     "discord-xp": "^1.1.7",
     "discord.js": "^12.5.1",
